# VariationalShapeApproximation

./: CMakeLists.txt  HalfedgeDS.cpp  README.md  main.cpp
data/: Fertility.off  Girl.off  Kitten.off  dragon.off  main copy.cpp
